--- a/Week 9/hellokitty-projectpage.html
+++ b/Week 9/hellokitty-projectpage.html
@@ -38,7 +38,7 @@
                 <img src="images/4aaeb37f8d9bee19-notebooks-1-hk-fixed.jpg"> 
             </div>
         
-            <div class="description">
+            <div class="hkdescription">
                 <p>Poketo x Hello Kitty Collaboration for Poketo, 2015</p>
                 <p>Merged identities for both brands to create a playful collection of homegoods and apparel. </p>
                 <p>In collaboration with Annie Seo and Hae Jin Park. Photography and styling by Kourtney Jackson and David Lopez </p>
