--- a/Week_9/index.html
+++ b/Week_9/index.html
@@ -161,7 +161,7 @@
       
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <script src="http://npmcdn.com/isotope-cells-by-row@1/cells-by-row.js"></script>
+    <script src="https://npmcdn.com/isotope-cells-by-row@1/cells-by-row.js"></script>
         
     <script>
         $('.grid').isotope({
